--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
    <div class="footer-container">
    
         <div class="footer-column">
-            <h3>Tools</h3>
+            <h3>Date and Time</h3>
             <ul>
                 <li>
                     <div id="np_widget_wiz1" widget="day-sm" style="width: 300px;"></div>
