--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google-adsense-account" content="ca-pub-7909865065068819">
 
     
-    <meta name="description" content="Useful tools, land area converter, time series data visualization, concrete estimate, wall materials estimate, unit converter, steel and GI weight, length, dimensions calculator, finder, and more. Explore various utilities to simplify calculations and data analysis.">
+    <meta name="description" content="Explore useful tools like land area converter, concrete estimate, steel weight calculator, unit converters, and more for easy calculations and analysis.">
     <meta name="keywords" content="land area converter, concrete estimate, wall materials estimate, unit converter, steel calculator, GI rod calculator, steel weight calculator, dimension calculator, construction tools, data visualization tools">
     <meta name="author" content="Krishna Niraula">
     
