--- a/converter/concrete-calculator/index.html
+++ b/converter/concrete-calculator/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Concrete Calculator - Accurate Concrete & Mortar Estimates">
     <meta property="og:description" content="Easily estimate the amount of Bricks, cement, sand, and aggregate needed for construction projects. Perfect for builders and DIYers!">
-    <meta property="og:image" content="https://krishnaniraula.com.np/assets/images/concrete-calculator.jpg">
+    <meta property="og:image" content="https://krishnaniraula.com.np/assets/images/concrete-calculator.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://krishnaniraula.com.np/converter/concrete-calculator/">
