--- a/converter/concrete-calculator/index.html
+++ b/converter/concrete-calculator/index.html
@@ -35,7 +35,9 @@
     <link rel="preload" href="script.js" as="script">
     <script defer src="script.js"></script>
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
+     crossorigin="anonymous"></script>
+    
     <link rel="icon" href="/assets/logo/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/logo/apple-touch-icon.png">
     
