--- a/converter/steel-bars-calculator/index.html
+++ b/converter/steel-bars-calculator/index.html
@@ -43,7 +43,9 @@
     
     <link rel="preload" href="script.js" as="script">
     <script defer src="script.js"></script>
-
+    
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
+     crossorigin="anonymous"></script>
   
     <script type="application/ld+json">
     {
