--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -53,12 +53,16 @@
   
     <link rel="canonical" href="https://krishnaniraula.com.np/land-area-converter/">
 
+
   
+    
     <meta name="theme-color" content="#008080">
 
   
     <link rel="stylesheet" href="styles.css">
 
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
+     crossorigin="anonymous"></script>
    
     <script type="application/ld+json">
     {
