--- a/converter/unit-converter/index.html
+++ b/converter/unit-converter/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Free online unit converter for length, area, volume, and volume-to-weight calculations. Easily convert between metric and imperial units.">
     <meta name="keywords" content="unit converter, length converter, area converter, volume converter, construction calculator, measurement conversion">
-    <meta name="author" content="Your Website Name">
+    <meta name="author" content="https://krishnaniraula.com.np">
     <title>Unit Converter - Length, Area, Volume & Weight Calculator</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="canonical" href="https://yourwebsite.com/unit-converter">
+    <link rel="canonical" href="https://krishnaniraula.com.np/converter/unit-converter/">
     
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819" crossorigin="anonymous"></script>
 </head>
