--- a/converter/unit-converter/index.html
+++ b/converter/unit-converter/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Free online unit converter for length, area, volume, and volume-to-weight calculations. Easily convert between metric and imperial units.">
+    <meta name="description" content="Free online unit converter for length, area, volume, and volume-to-weight calculations. Convert metric and imperial units with ease.">
     <meta name="keywords" content="unit converter, length converter, area converter, volume converter, construction calculator, measurement conversion">
     <meta name="author" content="https://krishnaniraula.com.np">
     <title>Unit Converter - Length, Area, Volume & Weight Calculator</title>
@@ -17,7 +17,7 @@
         <h1>Unit Converter - Length, Area, Volume & Weight</h1>
         <p>Convert measurements easily with our online unit converter for construction and daily use.</p>
     </header>
-    
+
     <nav>
         <ul>
             <li><a href="#length-converter">Length Converter</a></li>
@@ -26,14 +26,14 @@
             <li><a href="#volumeToWeight-converter">Volume to Weight Converter</a></li>
         </ul>
     </nav>
-    
+
     <section id="unit-converter">
-        <h2>Choose a Conversion Tool</h2>
+        <h2>Select a Conversion Type</h2>
         <div class="converter-buttons">
             <button onclick="showConverter('length')">Length Converter</button>
             <button onclick="showConverter('area')">Area Converter</button>
             <button onclick="showConverter('volume')">Volume Converter</button>
-            <button onclick="showConverter('volumeToWeight')">Volume to Weight Converter</button>
+            <button onclick="showConverter('volumeToWeight')">Volume to Weight</button>
         </div>
 
         <div id="length-converter" class="converter hidden">
