--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
         </div>
         <div class="container">
             <div class="box-container">
-                <a href="converter/unit converter/" class="box">Unit Converter</a>
+                <a href="converter/unit-converter/" class="box">Unit Converter</a>
                 <a href="Load-calculator/" class="box">Load Calculator</a>
 		<a href="converter/concrete-calculator" class="box">Concrete Calculator</a>
                 <a href="land-area-converter/" class="box">Land Area Converter</a>
