--- a/converter/unit-converter/index.html
+++ b/converter/unit-converter/index.html
@@ -96,7 +96,7 @@
     </section>
     
     <footer>
-        <p>&copy; 2025 Your Website Name. All rights reserved.</p>
+        <p>&copy; 2025 Krishna Niraula. All rights reserved.</p>
     </footer>
     
     <script src="script.js"></script>
