--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
         <div class="container">
             <div class="box-container">
                 <a href="converter/unit-converter/" class="box">Unit Converter</a>
-                <a href="Load-calculator/" class="box">Load Calculator</a>
+                <a href="converter/asphalt-calculator/" class="box">Asphalt Calculator</a>
 		<a href="converter/concrete-calculator" class="box">Concrete Calculator</a>
                 <a href="land-area-converter/" class="box">Land Area Converter</a>
 		<a href="converter/steel-bars-calculator" class="box">Steel and GI Calculator</a>
