--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Calculate materials for bituminous concrete works (BM, DBM, BC, PMC, Sand Seal) based on Nepal DoR Standards (2073). User-friendly calculator with customizable inputs.">
     <meta name="keywords" content="bituminous works calculator, Nepal DoR, asphalt concrete, premix carpet, sand seal, road construction materials">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Krishna Niraula">
     <meta name="robots" content="index, follow">
     <title>Bituminous Works Calculator - Nepal DoR Standards</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://yourdomain.com/bituminous-calculator/">
-    <!-- Open Graph Tags -->
+    <link rel="canonical" href="https://krishnaniraula.com.np/converter/asphalt-calculator/">
+   
     <meta property="og:title" content="Bituminous Works Calculator - Nepal DoR Standards">
     <meta property="og:description" content="Calculate materials for bituminous works based on Nepal DoR Standards (2073).">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com/bituminous-calculator/">
-    <meta property="og:image" content="https://yourdomain.com/assets/images/calculator-preview.png">
-    <!-- Twitter Card Tags -->
+    <meta property="og:url" content="https://krishnaniraula.com.np/converter/asphalt-calculator/">
+    <meta property="og:image" content="https://krishnaniraula.com.np/assets/images/asphaltpage.png">
+    
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Bituminous Works Calculator - Nepal DoR Standards">
     <meta name="twitter:description" content="Calculate materials for bituminous works based on Nepal DoR Standards (2073).">
-    <meta name="twitter:image" content="https://yourdomain.com/assets/images/calculator-preview.png">
-    <!-- Structured Data (JSON-LD) -->
+    <meta name="twitter:image" content="https://https://krishnaniraula.com.np/assets/images/asphaltpage.png">
+    
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
@@ -89,7 +89,7 @@
 
 
     <footer>
-        <p>© 2025 Your Name. All rights reserved.</p>
+        <p>© Krishna Niraula. All rights reserved.</p>
     </footer>
 
    <script>
@@ -102,7 +102,7 @@
       })
       .then(jsCode => {
         const script = document.createElement("script");
-        script.text = jsCode; // Use .text instead of .innerHTML for cleaner JS injection
+        script.text = jsCode; 
         document.body.appendChild(script);
       })
       .catch(error => console.error("Error loading script:", error));
