--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -43,7 +43,7 @@
    
     <nav>
         <div class="nav-left">
-            <a href="#" onclick="window.location.reload();" class="no-dec">Home</a>
+            <a href="/index.html" class="no-dec">Home</a>
         </div>
     </nav>
 
