--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -22,7 +22,8 @@
     <meta name="twitter:title" content="Bituminous Works Calculator - Nepal DoR Standards">
     <meta name="twitter:description" content="Calculate materials for bituminous works based on Nepal DoR Standards (2073).">
     <meta name="twitter:image" content="https://https://krishnaniraula.com.np/assets/images/asphaltpage.png">
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
+     crossorigin="anonymous"></script>
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
