--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Calculate materials for bituminous concrete works (BM, DBM, BC, PMC, Sand Seal) based on Nepal DoR Standards (2073). User-friendly calculator with customizable inputs.">
-    <meta name="keywords" content="bituminous works calculator, Nepal DoR, asphalt concrete, premix carpet, sand seal, road construction materials">
+    <meta name="description" content="Calculate materials for bituminous concrete works (BM, DBM, BC, PMC, Sand Seal) based on Nepal DoR Standards (2073).">
+    <meta name="keywords" content="bituminous works calculator, Nepal DoR, asphalt concrete, premix carpet, sand seal,DBM, Bituminous Macadam, road construction materials">
     <meta name="author" content="Krishna Niraula">
     <meta name="robots" content="index, follow">
     <title>Bituminous Works Calculator - Nepal DoR Standards</title>
@@ -30,7 +30,7 @@
         "@type": "WebApplication",
         "name": "Bituminous Works Calculator",
         "description": "A calculator for determining material quantities for bituminous concrete works per Nepal DoR Standards.",
-        "url": "https://yourdomain.com/bituminous-calculator/",
+        "url": "https://krishnaniraula.com.np/converter/asphalt-calculator/",
         "applicationCategory": "Construction",
         "operatingSystem": "Web",
         "author": {
