--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -49,47 +49,40 @@
     </nav>
 
       <div class="container">
-        <h1>Bituminous Works Calculator</h1>
-        <p>Calculate materials for bituminous concrete works based on Nepal DoR Standards (2073).</p>
+           <h1>Bituminous Works Calculator</h1>
+         <p>Calculate materials for bituminous concrete works based on Nepal DoR Standards (2073).</p>
 
-        <div class="button-group">
-    <button id="btn-BM-19mm" onclick="selectType('BM-19mm')">BM 19mm</button>
-    <button id="btn-BM-40mm" onclick="selectType('BM-40mm')">BM 40mm</button>
-    <button id="btn-DBM-26.5mm" onclick="selectType('DBM-26.5mm')">DBM 26.5mm</button>
-    <button id="btn-DBM-35.5mm" onclick="selectType('DBM-35.5mm')">DBM 35.5mm</button>
-    <button id="btn-BC-13.2mm" onclick="selectType('BC-13.2mm')">BC 13.2mm</button>
-    <button id="btn-BC-19mm" onclick="selectType('BC-19mm')">BC 19mm</button>
-    <button id="btn-PMC-Close" onclick="selectType('PMC-Close')">PMC Close</button>
-    <button id="btn-PMC-Open" onclick="selectType('PMC-Open')">PMC Open</button>
-    <button id="btn-SandSeal" onclick="selectType('SandSeal')">Sand Seal</button>
-</div>
-
-        <div id="input-form" class="input-form hidden">
-    <h2 id="type-title">Select a Type</h2>
-    <div class="input-group">
-        <label for="volume">Total Compacted Volume (m³):</label>
-        <input type="number" id="volume" min="0" step="0.01" value="1">
-    </div>
-    <div class="input-group">
-        <label for="density">Compacted Density (kg/m³):</label>
-        <input type="number" id="density" min="0" step="1" value="2350">
-    </div>
-    <div class="input-group">
-        <label for="loose-factor">Loose Factor (e.g., 1.4):</label>
-        <input type="number" id="loose-factor" min="1" step="0.01" value="1.4">
-    </div>
-    <div class="input-group">
-        <label for="bitumen-value">Bitumen Content (%):</label>
-        <input type="number" id="bitumen-value" min="0" step="0.1" value="0">
-    </div>
-    <h3>Material Proportions (% by weight)</h3>
-    <div id="material-inputs"></div>
-    <button onclick="calculate()">Calculate</button>
-</div>
-
-        <div id="results" class="results hidden"></div>
+       <div class="button-group">
+        <button id="btn-BM-19mm" onclick="selectType('BM-19mm')">BM 19mm</button>
+        <button id="btn-BM-40mm" onclick="selectType('BM-40mm')">BM 40mm</button>
+        <button id="btn-DBM-26.5mm" onclick="selectType('DBM-26.5mm')">DBM 26.5mm</button>
+        <button id="btn-DBM-35.5mm" onclick="selectType('DBM-35.5mm')">DBM 35.5mm</button>
+        <button id="btn-BC-13.2mm" onclick="selectType('BC-13.2mm')">BC 13.2mm</button>
+        <button id="btn-BC-19mm" onclick="selectType('BC-19mm')">BC 19mm</button>
+        <button id="btn-PMC-Close" onclick="selectType('PMC-Close')">PMC Close</button>
+        <button id="btn-PMC-Open" onclick="selectType('PMC-Open')">PMC Open</button>
+        <button id="btn-SandSeal" onclick="selectType('SandSeal')">Sand Seal</button>
     </div>
 
+    <div id="input-form" class="hidden">
+        <h2 id="type-title"></h2>
+        <div class="input-group">
+            <label for="volume">Compacted Volume (m³):</label>
+            <input type="number" id="volume" step="0.01" min="0">
+        </div>
+        <div class="input-group">
+            <label for="density">Density (kg/m³):</label>
+            <input type="number" id="density" step="1">
+        </div>
+        <div class="input-group">
+            <label for="bitumen-value">Bitumen Content (%):</label>
+            <input type="number" id="bitumen-value" step="0.1">
+        </div>
+        <div id="material-inputs"></div>
+        <button onclick="calculate()">Calculate</button>
+    </div>
+
+    <div id="results" class="hidden"></div>
 
 
     <footer>
