--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -66,6 +66,7 @@
 
     <div id="input-form" class="hidden">
         <h2 id="type-title"></h2>
+        <h3 id="type-description"></h3>
         <div class="input-group">
             <label for="volume">Compacted Volume (m³):</label>
             <input type="number" id="volume" step="0.01" min="0">
