--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Calculate materials for bituminous concrete works (BM, DBM, BC, PMC, Sand Seal) based on Nepal DoR Standards (2073).">
-    <meta name="keywords" content="bituminous works calculator, Nepal DoR, asphalt concrete, premix carpet, sand seal,DBM, Bituminous Macadam, road construction materials">
+    <meta name="keywords" content="bituminous works calculator, Nepal DoR, asphalt concrete, premix carpet, sand seal,DBM,Dense Bituminous Macadam, Bituminous Macadam, road construction materials, quantity finder">
     <meta name="author" content="Krishna Niraula">
     <meta name="robots" content="index, follow">
     <title>Bituminous Works Calculator - Nepal DoR Standards</title>
@@ -61,7 +61,7 @@
         <button id="btn-BC-19mm" onclick="selectType('BC-19mm')">BC 19mm</button>
         <button id="btn-PMC-Close" onclick="selectType('PMC-Close')">PMC Close</button>
         <button id="btn-PMC-Open" onclick="selectType('PMC-Open')">PMC Open</button>
-        <button id="btn-SandSeal" onclick="selectType('SandSeal')">Sand Seal</button>
+        <button id="btn-SandSeal" onclick="selectType('SandSeal')">Sand Asphalt</button>
     </div>
 
     <div id="input-form" class="hidden">
