--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Calculate materials for bituminous concrete works (BM, DBM, BC, PMC, Sand Seal) based on Nepal DoR Standards (2073).">
-    <meta name="keywords" content="bituminous works calculator, Nepal DoR, asphalt concrete, premix carpet, sand seal,DBM,Dense Bituminous Macadam, Bituminous Macadam, road construction materials, quantity finder">
+    <meta name="description" content="Calculate and estimate total materials and production quantity and cost for bituminous concrete works (BM, DBM, BC, PMC, Sand Seal) based on Nepal DoR Standards (2073).">
+    <meta name="keywords" content="bituminous works calculator, Nepal DoR, asphalt concrete, premix carpet, sand seal,DBM,Dense Bituminous Macadam, Bituminous Macadam, road construction materials, quantity finder, cost estimate">
     <meta name="author" content="Krishna Niraula">
     <meta name="robots" content="index, follow">
     <title>Bituminous Works Calculator - Nepal DoR Standards</title>
