--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -35,7 +35,7 @@
         "operatingSystem": "Web",
         "author": {
             "@type": "Person",
-            "name": "Your Name"
+            "name": "Krishna Niraula"
         }
     }
     </script>
