--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -29,7 +29,7 @@
         "@context": "https://schema.org",
         "@type": "WebApplication",
         "name": "Bituminous Works Calculator",
-        "description": "A calculator for determining material quantities for bituminous concrete works per Nepal DoR Standards.",
+        "description": "A calculator for determining total material quantities quantities, costs and production cost for all types of bituminous concrete works per Nepal DoR Standards.",
         "url": "https://krishnaniraula.com.np/converter/asphalt-calculator/",
         "applicationCategory": "Construction",
         "operatingSystem": "Web",
