--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -50,6 +50,7 @@
 
       <div class="container">
            <h1>Bituminous Works Calculator</h1>
+          <h2>Click 'Calculate' for Gradations and Other Details.</h2>
          <p>Calculate materials for bituminous concrete works based on Nepal DoR Standards (2073).</p>
 
        <div class="button-group">
