--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="canonical" href="https://krishnaniraula.com.np/converter/asphalt-calculator/">
-   
+   <link rel="shortcut icon" type="image/icon" href="/assets/logo/favicon.png"/>
     <meta property="og:title" content="Bituminous Works Calculator - Nepal DoR Standards">
     <meta property="og:description" content="Calculate materials for bituminous works based on Nepal DoR Standards (2073).">
     <meta property="og:type" content="website">
