--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="bituminous works calculator, Nepal DoR, asphalt concrete, premix carpet, sand seal,DBM,Dense Bituminous Macadam, Bituminous Macadam, road construction materials, quantity finder, cost estimate">
     <meta name="author" content="Krishna Niraula">
     <meta name="robots" content="index, follow">
-    <title>Bituminous Works Calculator - Nepal DoR Standards</title>
+    <title>Advanced Bituminous Works Calculator - Nepal DoR Standards</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="canonical" href="https://krishnaniraula.com.np/converter/asphalt-calculator/">
