--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -28,7 +28,7 @@
     {
         "@context": "https://schema.org",
         "@type": "WebApplication",
-        "name": "Bituminous Works Calculator",
+        "name": "Advanced Bituminous Works Calculator",
         "description": "A calculator for determining total material quantities quantities, costs and production cost for all types of bituminous concrete works per Nepal DoR Standards.",
         "url": "https://krishnaniraula.com.np/converter/asphalt-calculator/",
         "applicationCategory": "Construction",
@@ -49,7 +49,7 @@
     </nav>
 
       <div class="container">
-           <h1>Bituminous Works Calculator</h1>
+           <h1>Advanced Bituminous Works Calculator</h1>
         
          <p>Calculate materials for bituminous concrete works based on Nepal DoR Standards (2073).</p>
 
