--- a/converter/Horizontal-Cylinder-Volume/index.html
+++ b/converter/Horizontal-Cylinder-Volume/index.html
@@ -34,6 +34,7 @@
         <div class="result-section" id="result">
             <h2>Result</h2>
             <p id="volume-result">Volume: <span>0</span> cubic meters</p>
+            <p id="volume-liters">Volume: <span>0</span> liters</p>
         </div>
     </div>
 
