--- a/converter/steel-bars-calculator/index.html
+++ b/converter/steel-bars-calculator/index.html
@@ -71,7 +71,7 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="head-container">
             <h1>Steel & GI Calculator</h1>
             <p>Accurate weight and dimension calculations for steel and GI materials</p>
         </div>
