--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -118,7 +118,7 @@
 
         <div id="results" class="hidden"></div>
     </div>
-
+<button onclick="location.href='FAQ.html'" class="faq-button">FAQ</button>
     <footer>
         <p>© Krishna Niraula. All rights reserved.</p>
     </footer>
