--- a/converter/asphalt-calculator/FAQ.html
+++ b/converter/asphalt-calculator/FAQ.html
@@ -237,5 +237,6 @@
             </div>
         </div>
     </div>
+     <a href="index.html" class="back-button" aria-label="Return to Asphalt Calculator">Back</a>
 </body>
 </html>
