--- a/converter/asphalt-calculator/FAQ.html
+++ b/converter/asphalt-calculator/FAQ.html
@@ -61,6 +61,18 @@
             margin-top: 5px;
             white-space: pre-wrap;
         }
+
+       back-button {
+    padding: 12px 25px;
+    background: #3498db;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-size: 1em;
+    cursor: pointer;
+    transition: background 0.3s ease, transform 0.2s ease;
+}
+
     </style>
     <!-- FAQPage Schema Markup for SEO -->
     <script type="application/ld+json">
