--- a/converter/asphalt-calculator/FAQ.html
+++ b/converter/asphalt-calculator/FAQ.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Frequently Asked Questions (FAQ) about the advanced Asphalt Calculator. A complete bitumenous work estimator in Nepal.">
+    <meta name="keywords" content="Asphalt Calculator, Premix calculator, Asphalt Estimator, Bituminous Macadam(BM), Dense Bituminous Macadam (DBM), Bituminous Concrete (BC), Close-Graded Premix Carpet (PMC), Open-Graded Premix Carpet (PMC), Sand Seal">
+    <meta name="author" content="Krishna Niraula">
     <title>FAQ - Advanced Bituminous Calculator</title>
     <style>
         body {
@@ -74,7 +77,7 @@
 }
 
     </style>
-    <!-- FAQPage Schema Markup for SEO -->
+   
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
