--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -8,7 +8,7 @@
     <title>Land Area Converter - Convert Ropani, Aana, Dhur to Sq. Meters, Bigaha, all in Nepali Measurements</title>
     
     <meta name="description" content="Easily convert land area units like Ropani, Aana, Dhur, Kattha, and Bigaha to square meters, acres, and hectares with this accurate Nepali Land Area Converter tool.">
-    <meta name="keywords" content="land area converter, Ropani to square meter, Aana to square feet, Nepali land measurements, land conversion tool">
+    <meta name="keywords" content="land area converter, jagga ko area, kshetrafal, ghaderi, Ropani to square meter, Aana to square feet, Nepali land measurements, land conversion tool">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Krishna Niraula">
     
