--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     
     <meta name="description" content="Explore useful tools like land area converter, concrete estimate, steel weight calculator, unit converters, and more for easy calculations and analysis.">
-    <meta name="keywords" content="land area converter, concrete estimate, wall materials estimate, unit converter, steel calculator, GI rod calculator, steel weight calculator, dimension calculator, construction tools, data visualization tools">
+    <meta name="keywords" content="best land area converter in nepal, concrete estimate, wall materials estimate, unit converter, steel and GI calculator, construction tools, data visualization tools">
     <meta name="author" content="Krishna Niraula">
     
   
