--- a/index.html
+++ b/index.html
@@ -317,7 +317,9 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 
 
     <script src="scripts.js"></script>
-   <button id="backToTop" class="floating-button">↑</button>
+   <button class="back-to-top" aria-label="Back to Top">
+  <span>↑</span>
+</button>
 
 </body>
 </html>
