--- a/index.html
+++ b/index.html
@@ -63,18 +63,7 @@
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
         <ul id="menu">
             <li><a href="#tools" class="no-deco">Tools</a></li>
-            <li class="dropdown">Apps
-                <ul class="dropdown-content">
-                    <li class="dropdown">Caputok
-                        <ul class="dropdown-content">
-                            <li><a href="https://caputok.en.uptodown.com/android">Play Store</a></li>
-                            <li><a href="#">App Store</a></li>
-                            <li><a href="assets/apps/caputok/privacy_policy/">Privacy Policy</a></li>
-                            <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
+		<li><a href="#portfolio" class="no-deco">Apps</a></li>
             <li><a href="#contact" class="no-deco">Contact</a></li>
             <li><a href="#contact" class="no-deco">About</a></li>
         </ul>
