--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -44,7 +44,7 @@
    
     <nav>
         <div class="nav-left">
-            <a href="/index.html" class="no-dec">Home</a>
+            <a href="/" class="no-dec">Home</a>
         </div>
     </nav>
 
