--- a/converter/asphalt-calculator/FAQ.html
+++ b/converter/asphalt-calculator/FAQ.html
@@ -252,6 +252,6 @@
             </div>
         </div>
     </div>
-     <a href="#" class="back-button" aria-label="Return to Asphalt Calculator">Back</a>
+     <a href="index.html" class="back-button" aria-label="Return to Asphalt Calculator">Back</a>
 </body>
 </html>
