--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="/index.html" class="nav-link">Home</a>
+        <a href="/" class="nav-link">Home</a>
     </nav>
     <div class="container">
         <h1>Land Area Converter - Convert Ropani, Aana, Dhur</h1>
