--- a/time-series-chart-animation/index.html
+++ b/time-series-chart-animation/index.html
@@ -31,7 +31,7 @@
 <body>
  <nav>
     <div class="nav-left">
-        <a href="/index.html" class="no-dec">Home</a>
+        <a href="/" class="no-dec">Home</a>
     </div>
 </nav>
 <h1>Visualize Your Time-series Data</h1>
