--- a/converter/concrete-calculator/index.html
+++ b/converter/concrete-calculator/index.html
@@ -69,7 +69,7 @@
    
     <nav aria-label="Main navigation">
         <div class="nav-left">
-            <a href="/index.html" class="no-dec">Home</a>
+            <a href="/" class="no-dec">Home</a>
         </div>
     </nav>
 
