--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -56,7 +56,7 @@
       "@type": "WebPage",
       "name": "Land Area Converter",
       "url": "https://krishnaniraula.com.np/land-area-converter/",
-      "description": "Convert land measurement units like Ropani, Aana, and Dhur, Bigaha, Square Meters, Acres, and more.",
+      "description": "Convert land measurement units like Ropani, Aana, and Dhur, Bigaha, kaththa, dam, paisa, Square Meters, Hectare, and more.",
       "author": {
         "@type": "Person",
         "name": "Krishna Niraula"
