--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -20,7 +20,7 @@
     
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Bituminous Works Calculator - Nepal DoR Standards">
-    <meta name="twitter:description" content="Calculate materials for bituminous works based on Nepal DoR Standards (2073).">
+    <meta name="twitter:description" content="Calculate materials quantity and costs, total production costs, everything for bituminous works based on Nepal DoR Standards (2073).">
     <meta name="twitter:image" content="https://krishnaniraula.com.np/assets/images/asphaltpage.png">
  
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
@@ -52,7 +52,7 @@
       <div class="container">
            <h1>Advanced Bituminous Works Calculator</h1>
         
-         <p>Calculate materials for bituminous concrete works based on Nepal DoR Standards (2073).</p>
+         <p>Calculate required materials quantity, costs, total production costs, all for bituminous concrete works based on Nepal DoR Standards (2073).</p>
 
        <div class="button-group">
         <button id="btn-BM-19mm" onclick="selectType('BM-19mm')">BM 19mm</button>
