--- a/converter/asphalt-calculator/index.html
+++ b/converter/asphalt-calculator/index.html
@@ -52,7 +52,7 @@
       <div class="container">
            <h1>Advanced Bituminous Works Calculator</h1>
         
-         <p>Calculate required materials quantity, costs, total production costs, all for bituminous concrete works based on Nepal DoR Standards (2073).</p>
+         <p>Find the required materials, calculate their quantities and costs, determine the total production cost, compare material costs from different crushers, and perform all necessary calculations for bituminous concrete works based on Nepal DoR Standards (2073).</p>
 
        <div class="button-group">
         <button id="btn-BM-19mm" onclick="selectType('BM-19mm')">BM 19mm</button>
