--- a/asphalt-calculator/index.html
+++ b/asphalt-calculator/index.html
@@ -10,12 +10,12 @@
     <title>Advanced Bituminous Works Calculator - Nepal DoR Standards</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://krishnaniraula.com.np/converter/asphalt-calculator/">
+    <link rel="canonical" href="https://krishnaniraula.com.np/asphalt-calculator/">
    <link rel="shortcut icon" type="image/icon" href="/assets/logo/favicon.png"/>
     <meta property="og:title" content="Bituminous Works Calculator - Nepal DoR Standards">
     <meta property="og:description" content="Calculate materials for bituminous works based on Nepal DoR Standards (2073).">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://krishnaniraula.com.np/converter/asphalt-calculator/">
+    <meta property="og:url" content="https://krishnaniraula.com.np/asphalt-calculator/">
     <meta property="og:image" content="https://krishnaniraula.com.np/assets/images/asphaltpage.png">
     
     <meta name="twitter:card" content="summary_large_image">
@@ -31,7 +31,7 @@
         "@type": "WebApplication",
         "name": "Advanced Bituminous Works Calculator",
         "description": "A calculator for determining total material quantities quantities, costs and production cost for all types of bituminous concrete works per Nepal DoR Standards.",
-        "url": "https://krishnaniraula.com.np/converter/asphalt-calculator/",
+        "url": "https://krishnaniraula.com.np/asphalt-calculator/",
         "applicationCategory": "Construction",
         "operatingSystem": "Web",
         "author": {
