--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
         <div class="container">
             <div class="box-container">
                 <a href="converter/unit-converter/" class="box">Unit Converter</a>
-                <a href="converter/asphalt-calculator/" class="box">Asphalt Calculator</a>
-		<a href="converter/concrete-calculator" class="box">Concrete Calculator</a>
+                <a href="asphalt-calculator/" class="box">Asphalt Calculator</a>
+		<a href="concrete-calculator/" class="box">Concrete Calculator</a>
                 <a href="land-area-converter/" class="box">Land Area Converter</a>
-		<a href="converter/steel-bars-calculator" class="box">Steel and GI Calculator</a>
+		<a href="steel-bars-calculator/" class="box">Steel and GI Calculator</a>
                 <a href="time-series-chart-animation/" class="box">Animated Time-Series Chart</a>
             </div>
         </div>
