--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
-    <meta name="description" content="Explore useful tools like Nepali land area converter, detail calculations of asphalt works, steel weight calculator, and more for easy calculations and analysis.">
+    <meta name="description" content="Explore useful tools like Nepali land area converter, detail calculations of asphalt works, steel and GI weight calculator, data visualization and more for easy calculations.">
     <meta name="keywords" content="best land area converter in nepal, concrete estimate, wall materials estimate, unit converter, steel and GI calculator, construction tools, data visualization tools">
     <meta name="author" content="Krishna Niraula">
     <meta property="og:title" content="Welcome to Krishna's Website - Data Visualization & Tools">
