--- a/index.html
+++ b/index.html
@@ -132,7 +132,60 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
     </div>
 </section>
 	  
-   
+   <section id="about-work" class="about-work">
+    <div class="about-work-content">
+      
+        <div class="about-upper container">
+            <div class="about-upper-left">
+                <img src="assets/images/passport-photo.jpg" alt="Bhisma Niraula Passport Photo" class="passport-photo">
+            </div>
+<div class="about-upper-right">
+    <h2>Introduction</h2>
+    <p>नमस्ते, म भिष्म निरौला। भक्तपुर जिल्ला भित्र जग्गाको नाप जाँच, पास, जग्गा सम्बन्धी सम्पूर्ण कामहरूको लागि, साथै जुनसुकै स्थानमा जग्गा खरिद बिक्री, घरको नक्सा 2D, 3D, इन्टेरियर डिजाइन, एक्स्टेरियर डिजाइन लगायतका कामहरू छिटो-छरितो र बिना झन्झट, सहज ढंगबाट गर्नको लागि सम्पर्क गर्नुहोला।</p>
+    <p><strong>Phone:</strong>1234567 </p>
+    <p><strong>Email:</strong> <a href="mailto:mail@krishnaniraula.com.np">mail@krishnaniraula.com.np</a></p>
+    <p><strong>WhatsApp:</strong> <a href="https://wa.me/9841915278" target="_blank">https://wa.me/9841915278</a></p>
+</div>
+        </div>
+
+       
+        <div class="work-gallery container">
+            <h2>My Work</h2>
+            <div class="gallery-wrapper">
+                <div class="gallery-item">
+                    <img src="assets/images/work1.jpg" alt="Work Photo 1">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="assets/videos/work2.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/images/work3.jpg" alt="Work Photo 3">
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/images/work4.jpg" alt="Work Photo 4">
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+                </div>
+                <div class="gallery-item">
+                    <video controls>
+                        <source src="assets/videos/work5.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/images/work6.jpg" alt="Work Photo 6">
+                    <p>Qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <section id="skills" class="skills">
 				<div class="skill-content">
