--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
                 <img src="assets/images/passport-photo.jpg" alt="Bhisma Niraula Passport Photo" class="passport-photo">
             </div>
 <div class="about-upper-right">
-    <h2>Introduction</h2>
-    <p>नमस्ते, म भिष्म निरौला। भक्तपुर जिल्ला भित्र जग्गाको नाप जाँच, पास, जग्गा सम्बन्धी सम्पूर्ण कामहरूको लागि, साथै जुनसुकै स्थानमा जग्गा खरिद बिक्री, घरको नक्सा 2D, 3D, इन्टेरियर डिजाइन, एक्स्टेरियर डिजाइन लगायतका कामहरू छिटो-छरितो र बिना झन्झट, सहज ढंगबाट गर्नको लागि सम्पर्क गर्नुहोला।</p>
+    <h2>भिष्म निरौला</h2>
+    <p>नमस्ते । भक्तपुर जिल्ला भित्र जग्गाको नाप जाँच, पास, जग्गा सम्बन्धी सम्पूर्ण कामहरूको लागि, साथै जुनसुकै स्थानमा जग्गा खरिद बिक्री, घरको नक्सा 2D, 3D, इन्टेरियर डिजाइन, एक्स्टेरियर डिजाइन लगायतका कामहरू छिटो-छरितो र बिना झन्झट, सहज ढंगबाट गर्नको लागि सम्पर्क गर्नुहोला।</p>
     <p><strong>Phone:</strong>Whatsapp Instead</p>
     <p><strong>Email:</strong> <a href="mailto:niraulabhisma@gmail.com">Email Bhisma</a></p>
     <p><strong>WhatsApp:</strong> <a href="https://wa.me/9841915278" target="_blank">Whatsapp Bhisma</a></p>
