--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <ul id="menu">
             <li><a href="#tools" class="no-deco">Tools</a></li>
 		<li><a href="#portfolio" class="no-deco">Apps</a></li>
-		<li><a href="#about-work" class="no-deco">जग्गाको काम</a></li>
+		<li><a href="#about-work" class="no-deco">घर जग्गा</a></li>
             <li><a href="#contact" class="no-deco">Contact</a></li>
             <li><a href="#contact" class="no-deco">About</a></li>
         </ul>
