--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
     <nav>
     <div class="nav-left">
-        <a href="#" onclick="window.location.reload();" class="no-dec">Home</a>
+        <a href="/" onclick="window.location.reload();" class="no-dec">Home</a>
     </div>
 
     <div class="nav-right">
