--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     {
       "@context": "https://schema.org",
       "@type": "Website",
-      "name": "Krishna's Website - Data Visualization & Tools",
+      "name": "Krishna's Website",
       "url": "https://krishnaniraula.com.np",
       "description": "Explore a variety of useful tools to simplify construction calculations, including land area conversion, concrete material estimation, steel weight calculations, and more.",
       "potentialAction": {
@@ -76,7 +76,7 @@
             </div>
             <div class="intro-text">
                 <h1>Welcome to Krishna's Website</h1>
-                <p>Explore various tools, including land area converters, concrete material calculators, steel and GI rod estimators, and much more. Discover resources to simplify construction, engineering, and data analysis tasks.</p>
+                <p>Working in Construction industry since 2009, from surveyor - supervisor to Project Manager . Here you can explore various tools, including <strong>Advanced Bitumenous work estimator, land area converters</strong>, and much more. Discover resources to simplify construction, engineering, and all works related to land and land revenue office. <strong>Contact for more.</strong></p>
              </div>
         </div>
    
