--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
             <h2>My Work</h2>
             <div class="gallery-wrapper">
                 <div class="gallery-item">
-                    <img src="assets/images/work1.jpg" alt="Work Photo 1">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <img src="assets/images/bhismawork1.jpg" alt="Work Photo 1">
+                    <p>मेसिनबाट जग्गाको क्षेत्रफल नाप्दै</p>
                 </div>
                 <div class="gallery-item">
                     <video controls>
@@ -164,8 +164,8 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
                     <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="assets/images/work3.jpg" alt="Work Photo 3">
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                    <img src="assets/images/bhismawork3.jpg" alt="Work Photo 3">
+                    <p>लोकप्रिय पप गायक नविन के. भट्टराईसँग आफ्नै अफिसमा</p>
                 </div>
                 <div class="gallery-item">
                     <img src="assets/images/work4.jpg" alt="Work Photo 4">
